# Gpay-Remit

./: .gitignore  LICENSE  PR_DESCRIPTION.md  README.md  docker-compose.yml
contracts/: Cargo.toml
contracts/benches/: escrow_bench.rs  remittance_bench.rs
contracts/src/: aml.rs  events.rs  kyc.rs  lib.rs  oracle.rs  payment_escrow.rs  rate_limit.rs  remittance_hub.rs  upgradeable.rs
contracts/test_snapshots/: fuzz_calculate_fees.1.json  fuzz_calculate_fees.10.json  fuzz_calculate_fees.100.json  fuzz_calculate_fees.101.json  fuzz_calculate_fees.102.json  fuzz_calculate_fees.103.json  fuzz_calculate_fees.104.json  fuzz_calculate_fees.105.json  fuzz_calculate_fees.106.json  fuzz_calculate_fees.107.json  fuzz_calculate_fees.108.json  fuzz_calculate_fees.109.json  fuzz_calculate_fees.11.json  fuzz_calculate_fees.110.json  fuzz_calculate_fees.111.json  fuzz_calculate_fees.112.json  fuzz_calculate_fees.113.json  fuzz_calculate_fees.114.json  fuzz_calculate_fees.115.json  fuzz_calculate_fees.116.json  fuzz_calculate_fees.117.json  fuzz_calculate_fees.118.json  fuzz_calculate_fees.119.json  fuzz_calculate_fees.12.json  fuzz_calculate_fees.120.json  fuzz_calculate_fees.121.json  fuzz_calculate_fees.122.json  fuzz_calculate_fees.123.json  fuzz_calculate_fees.124.json  fuzz_calculate_fees.125.json  fuzz_calculate_fees.126.json  fuzz_calculate_fees.127.json  fuzz_calculate_fees.128.json  fuzz_calculate_fees.129.json  fuzz_calculate_fees.13.json  fuzz_calculate_fees.130.json  fuzz_calculate_fees.131.json  fuzz_calculate_fees.132.json  fuzz_calculate_fees.133.json  (+373 more)
docs/: fees.md  (+7 more)
(+243 files in other folders)
