[package]
name = "gpay-remit-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
proptest = "1.4.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "remittance_bench"
harness = false

[features]
prop = []
